RESOLVED FIXED161205
REGRESSION (r204839): [mac-wk1] LayoutTest webgl/max-active-contexts-webglcontextlost-prevent-default.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=161205
Summary REGRESSION (r204839): [mac-wk1] LayoutTest webgl/max-active-contexts-webglcon...
Ryan Haddad
Reported 2016-08-25 13:04:21 PDT
Attachments
Patch (5.55 KB, patch)
2016-09-01 11:47 PDT, Chris Dumez
no flags
Patch (21.12 KB, patch)
2016-09-01 12:53 PDT, Chris Dumez
no flags
Patch (21.12 KB, patch)
2016-09-01 12:55 PDT, Chris Dumez
no flags
Patch (21.35 KB, patch)
2016-09-01 13:12 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews115 for mac-yosemite (1.42 MB, application/zip)
2016-09-01 14:13 PDT, Build Bot
no flags
Patch (21.35 KB, patch)
2016-09-01 15:18 PDT, Chris Dumez
no flags
Patch (19.54 KB, patch)
2016-09-01 15:38 PDT, Chris Dumez
no flags
Patch (19.43 KB, patch)
2016-09-01 16:29 PDT, Chris Dumez
no flags
Ryan Haddad
Comment 1 2016-08-25 13:06:04 PDT
This test has been flaky since 8/23/2016 11:03:06 AM ~r204840
Ryan Haddad
Comment 2 2016-08-25 13:14:13 PDT
Ryan Haddad
Comment 3 2016-08-26 16:49:42 PDT
Alexey Proskuryakov
Comment 4 2016-08-31 15:14:13 PDT
Hmm, no new failures today, so may also be related to bug 161249.
Chris Dumez
Comment 5 2016-09-01 10:45:45 PDT
I am able to reproduce the flaky time out locally like so: Tools/Scripts/run-webkit-tests --release -1 --repeat-each=500 webgl/max-active-contexts-webglcontextlost-prevent-default.html I will investigate to see if this is caused by my change at r204839.
Chris Dumez
Comment 6 2016-09-01 11:44:08 PDT
Fix on the way.
Chris Dumez
Comment 7 2016-09-01 11:47:20 PDT
Chris Dumez
Comment 8 2016-09-01 11:53:25 PDT
I am actually still confirming this is caused by r204839. I have just realized I am forgotten to update TestExpectations locally, which is why the test started passing.
Chris Dumez
Comment 9 2016-09-01 12:00:27 PDT
I have confirmed this is caused by r204839 and I have an idea of what could be happening. I am working on a fix. If it takes to long to figure out, I'll rollout r204839.
Chris Dumez
Comment 10 2016-09-01 12:53:46 PDT
Chris Dumez
Comment 11 2016-09-01 12:55:45 PDT
Chris Dumez
Comment 12 2016-09-01 13:12:24 PDT
Build Bot
Comment 13 2016-09-01 14:13:43 PDT
Comment on attachment 287664 [details] Patch Attachment 287664 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1989154 New failing tests: webgl/1.0.2/conformance/extensions/oes-texture-float.html
Build Bot
Comment 14 2016-09-01 14:13:48 PDT
Created attachment 287678 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Chris Dumez
Comment 15 2016-09-01 15:18:32 PDT
Chris Dumez
Comment 16 2016-09-01 15:38:41 PDT
Chris Dumez
Comment 17 2016-09-01 16:21:40 PDT
Comment on attachment 287694 [details] Patch All green. Geoff, is this something you could review? I don't know who else is familiar with isReachableFromOpaqueRoots / visitAdditionalChildren.
Chris Dumez
Comment 18 2016-09-01 16:29:34 PDT
Geoffrey Garen
Comment 19 2016-09-02 11:55:09 PDT
Comment on attachment 287701 [details] Patch r=me
WebKit Commit Bot
Comment 20 2016-09-02 12:16:40 PDT
Comment on attachment 287701 [details] Patch Clearing flags on attachment: 287701 Committed r205360: <http://trac.webkit.org/changeset/205360>
WebKit Commit Bot
Comment 21 2016-09-02 12:16:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.