REGRESSION (r204839): [mac-wk1] LayoutTest webgl/max-active-contexts-webglcontextlost-prevent-default.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=161205

Reviewed by Geoffrey Garen.

Source/WebCore:

Fixes several issues:
- Add missing isReachableFromOpaqueRoots() implementation for JSWebGLRenderingContextBase.
  It used to rely on the one from its JSCanvasRenderingContext base. However, that base
  was dropped in r204839.
- Update JSWebGLRenderingContextBase::visitAdditionalChildren() to add its canvas
  object as opaque root as well. This used to be taken care of by
  JSCanvasRenderingContext::visitAdditionalChildren() but it got dropped in r204839.

This also refactors the code a bit for clarity.

No new tests, unskipped existing test.

* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSCanvasRenderingContext.h: Removed.
* bindings/js/JSDocumentCustom.cpp:
(WebCore::JSDocument::getCSSCanvasContext):
* bindings/js/JSHTMLCanvasElementCustom.cpp:
(WebCore::JSHTMLCanvasElement::getContext):
* bindings/js/JSWebGLRenderingContextBaseCustom.cpp:
(WebCore::toJSNewlyCreated):
(WebCore::toJS):
(WebCore::JSWebGLRenderingContextBaseOwner::isReachableFromOpaqueRoots):
(WebCore::JSWebGLRenderingContextBase::visitAdditionalChildren):
* html/canvas/CanvasRenderingContext.h:
(WebCore::CanvasRenderingContext::is3d):
* html/canvas/WebGLRenderingContextBase.h:
* html/canvas/WebGLRenderingContextBase.idl:

LayoutTests:

Unskip test case now that it is no longer flaky.

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/179692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205360 268f45cc-cd09-0410-ab3c-d52691b4dbfc